fix: fixed z-index bug

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,7 +22,8 @@
 
 .sidebar {
   grid-area: 1 / 10 / 2 / 13;
-  @apply mt-10 z-10 text-white lg:px-12 md:px-6 px-4 sm:overflow-y-scroll;
+  z-index: 3;
+  @apply mt-10 text-white lg:px-12 md:px-6 px-4 sm:overflow-y-scroll;
 }
 
 .main {
@@ -44,7 +45,7 @@
 }
 
 .titleContainer {
-  @apply mt-10 z-10 text-lime-400;
+  @apply mt-10 z-10;
 }
 
 .title {
